--- a/index.html
+++ b/index.html
@@ -549,34 +549,30 @@
             }
         }
 
-        .Precautions {
-            position: relative;
-            /* ← 上下移動を有効にする */
-            top: -20px;
-            /* ← 上に8pxずらす（数値調整可） */
-            margin-top: 0;
-            /* ← 上のマージンは0にしておくと自然 */
-            margin-bottom: 0px;
-            font-size: 13px;
-            color: #000000;
-            line-height: 1.5;
-            text-align: center;
-            word-wrap: break-word;
-            background-color: #fafafa;
-            padding: 0px;
-            border-radius: 4px 4px 4px 4px;
-            border: 1px solid black;
-        }
+.Precautions {
+  position: relative;
+  top: -20px;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 13px;
+  color: #000000;
+  line-height: 1.5;
+  text-align: left;          /* ← 左揃えに変更 */
+  word-wrap: break-word;
+  background-color: #fafafa;
+  padding: 0px;
+  border-radius: 4px;
+  border: 1px solid black;
+}
 
-        /* スマホ対応 */
-        @media (max-width: 768px) {
-            .Precautions {
-                font-size: 11.5px;
-                top: -10px;
-                /* ← モバイルでは少し控えめに上にずらす */
-                line-height: 2.0;
-            }
-        }
+/* スマホ対応 */
+@media (max-width: 768px) {
+  .Precautions {
+    font-size: 11.5px;
+    top: -10px;
+    line-height: 2.0;
+  }
+}
 
         .symptoms,
         .options {
@@ -929,7 +925,8 @@
     <div class="container">
         <h1>la chance<br>予約フォーム
         </h1>
-        <div class="Precautions">・施術不可能な方
+        <div class="Precautions"><div style="text-align:center; font-weight:bold; font-size:15px;">注意事項</div>
+            ・施術不可能な方
             ・妊婦の方<br>
             ・顔部分がケロイド性皮膚の方<br>
             ・ひどい脂性肌の方、肝炎保菌者の方<br>
@@ -979,7 +976,7 @@
             <div class="labeltyuuou">
                 <span class="highlight-text">◆シルエットブロウ◆</span>
             </div>
-            <div class="Precautions">注意事項 -シルエットブロウ-<br><br>
+            <div class="Precautions"><div style="text-align:center; font-weight:bold; font-size:15px;">注意事項 -シルエットブロウ-</div><br>
                 ・施術時間は約2時間を目安にお越しください。<br>
                 ・前日および当日の飲酒はお控えください。<br>
                 ・当日はメイクをしたままご来店いただいても構いません。<br>
@@ -1004,7 +1001,7 @@
             <div class="labeltyuuou">
                 <span class="highlight-text">◆ヘアティントアップ◆</span>
             </div>
-            <div class="Precautions">注意事項 -ヘアティントアップ-<br><br>
+            <div class="Precautions"><div style="text-align:center; font-weight:bold; font-size:15px;">注意事項 -ヘアティントアップ-</div><br>
                 ・施術時間は約2時間を目安にお越しください。<br>
                 ・前日および当日の飲酒はお控えください。<br>
                 ・施術の前後1週間は、カラーやパーマなどはお控えください。<br>
@@ -1029,7 +1026,7 @@
             <div class="labeltyuuou">
                 <span class="highlight-text">◆リップティントアップ◆</span>
             </div>
-            <div class="Precautions">注意事項 -リップティントアップ-<br><br>
+            <div class="Precautions"><div style="text-align:center; font-weight:bold; font-size:15px;">注意事項 -リップティントアップ-</div><br>
                 ・施術時間は約3時間を目安にお越しください。<br>
                 ・唇の周りを特に清潔に保つ。<br>
                 　（冷やす場合は氷を直接当てず、ガーゼの上に氷パックをのせて使用してください）<br>
