--- a/index.html
+++ b/index.html
@@ -1362,12 +1362,7 @@ function updateDisplayInfo() {
                 processing: document.getElementById('processing').value.trim(),
                 sheets: document.getElementById('sheets').value.trim(),
                 shirt: document.getElementById('shirt').value.trim(),
-                visitCount: visitCount,
-                selectedMenu: selectedMenu,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
-                irradiationsCount: irradiationsCount,
-                dates: selectedFullDate ? [selectedFullDate] : null, // 空チェック
-                message: document.getElementById('message').value.trim()
+                visitCount: visitCount
             };
 
             // フォームデータのチェック
