--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             /* 画面中央に固定 */
             transform: translateY(-50%) translateX(10px);
             /* 中央配置と右ずらし */
-            background: #13ca5e;
+            background: #58453b;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -104,7 +104,7 @@
         }
 
         h1 {
-            background: linear-gradient(135deg, #13ca5e, #13ca5e);
+            background: linear-gradient(135deg, #58453b, #49372d);
             color: white;
             padding: 20px;
             border-radius: 0 0px 0px 0px;
@@ -123,7 +123,7 @@
             margin-bottom: 20px;
             padding: 3px;
             font-weight: 400;
-            background-color: #13ca5e;
+            background-color: #58453b;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -141,7 +141,7 @@
             display: block;
             margin-bottom: 20px;
             padding: 3px;
-            background-color: #13ca5e;
+            background-color: #58453b;
             color: #ffffff;
             border-radius: 0px;
             font-size: 18px;
@@ -186,12 +186,12 @@
             align-items: center;
             justify-content: center;
             background: white;
-            color: #13ca5e;
+            color: #58453b;
             font-weight: bold;
             font-size: 0.9em;
             border-radius: 4px;
             padding: 2px 6px;
-            border: 2px solid #13ca5e;
+            border: 2px solid #58453b;
         }
 
         input[type="text"],
@@ -604,7 +604,7 @@
 
         .highlight-background {
             cursor: pointer;
-            background-color: #13ca5e;
+            background-color: #58453b;
             padding: 10px;
             border-radius: 6px;
             font-size: 18px;
@@ -651,7 +651,7 @@
         }
 
         .edit-button:hover {
-            background-color: #13ca5e;
+            background-color: #58453b;
             color: #ffffff;
             /* ← 黒背景に合わせて文字色を白にすると視認性が上がります（任意） */
         }
@@ -660,7 +660,7 @@
 
         input:focus,
         textarea:focus {
-            border-color: #13ca5e;
+            border-color: #58453b;
             outline: none;
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.2);
         }
@@ -685,13 +685,13 @@
             width: 100%;
             padding: 15px;
             font-size: 18px;
-            background-color: #13ca5e;
+            background-color: #979797;
             margin-top: 12px;
             /* ← ここで下方向にずらす */
         }
 
         .submit-button:hover {
-            background-color: #13ca5e;
+            background-color: #979797;
         }
 
         @media (max-width: 768px) {
@@ -714,7 +714,7 @@
             /* ここで枠線を指定 */
             outline-offset: 2px;
     /* 外側に色を追加 */
-    box-shadow: 0 0 0 3px #13ca5e
+    box-shadow: 0 0 0 3px #58453b
         }
 
         /* 必須マークのスタイル */
@@ -832,7 +832,7 @@
         <div class="label">作成枚数<span class="required">必須</span></div>
         <input type="tel" id="sheets" placeholder="作成枚数を入力してください" oninput="saveInput('sheets')">
 
-        <div class="label">ご来店回数<span class="required">必須</span></div>
+        <div class="label">デザイン案の有無<span class="required">必須</span></div>
         <div class="visit-buttons">
             <button type="button" id="firstVisit" onclick="selectVisit(this)">有り</button>
             <button type="button" id="repeatVisit" onclick="selectVisit(this)">無し</button>
@@ -842,7 +842,7 @@
         <div class="info-text">（ポリエステルTシャツ）<br>（綿Tシャツ）<br>（ポリエステルポロシャツ）など</div>
         <input type="text" id="shirt" placeholder="シャツの種類" oninput="saveInput('shirt')">
 
-        <div class="info-textsita">スタッフが確認後、見積もりを出してお返事させていただきます。</div>
+        <div class="info-textsita">スタッフが確認後、<br>見積もりを出してお返事させていただきます。</div>
 
         <button class="submit-button" onclick="submitForm()" div id="section-message">予約を行う</button>
     </div>
@@ -1394,7 +1394,7 @@ function updateDisplayInfo() {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n《お名前》：${formData.name}\n《電話番号》：${formData.phone}\n《選んだ加工種類》：${formData.processing}\n《作成枚数》：${formData.sheets}\n《デザイン案の有無》：${formData.visitCount}\n《シャツの種類》：${formData.shirt}`
+                text: `【修理依頼】\n《お名前》：${formData.name}\n《電話番号》：${formData.phone}\n\n《選んだ加工種類》：${formData.processing}\n\n《作成枚数》：${formData.sheets}\n\n《デザイン案の有無》：${formData.visitCount}\n\n《シャツの種類》：${formData.shirt}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('当日キャンセルは無いようにお願いいたします。');
