--- a/index.html
+++ b/index.html
@@ -1033,9 +1033,9 @@
                 <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】WINBACK施術（部位別30分）</button>
                 <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】WINBACK施術（全身60分）</button>
                 <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】メディカルチネイザン（60分）</button>
-                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】全身オイルリンパマッサージ（60分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】全身オイルリンパ×チネイザン（75分）</button>
-                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】貼るだけWINBACK施術（部位別20分）</button>
+                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>全身オイルリンパマッサージ（60分）</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>全身オイルリンパ×チネイザン（75分）</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>貼るだけWINBACK施術（部位別20分）</button>
                 <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヘッドマッサージ（10分）</button>
                 <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヨガ（60分）</button>
                 <button type="button" id="nineirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】TRXサスペンショントレーニング（50分）</button>
