--- a/index.html
+++ b/index.html
@@ -1716,10 +1716,11 @@ const selectedSymptomText = formData.selectedSymptom
     ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
     : 'メニュー未選択';
 
-// irradiationsCountの整形（nullチェック＋<br>削除）
+// irradiationsCountの整形（nullチェック & 改行やタグ除去）
 const irradiationsText = formData.irradiationsCount
-    ? formData.irradiationsCount.replace(/<br\s*\/?>/gi, '')
+    ? String(formData.irradiationsCount).replace(/<br\s*\/?>/gi, '').replace(/[\r\n]+/g, '')
     : 'なし';
+
 
             liff.sendMessages([{
                 type: 'text',
