--- a/index.html
+++ b/index.html
@@ -975,6 +975,9 @@
             background-color: #c0392b;
             /* ホバー時に少し濃く */
         }
+
+  .irradiations button .opt-prefix{ display:block; font-weight:600; }
+  .irradiations button .opt-title{ display:block; line-height:1.2; }
     </style>
 </head>
 
@@ -1030,16 +1033,16 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】WINBACK施術（部位別30分）</button>
-                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】WINBACK施術（全身60分）</button>
-                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】メディカルチネイザン（60分）</button>
-                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】<br>全身オイルリンパマッサージ（60分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】<br>全身オイルリンパ×チネイザン（75分）</button>
-                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】<br>貼るだけWINBACK施術（部位別20分）</button>
-                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】ヘッドマッサージ（10分）</button>
-                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】ヨガ（60分）</button>
-                <button type="button" id="nineirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】<br>TRXサスペンショントレーニング（50分）</button>
-                <button type="button" id="tenirradiations" onclick="selectirradiations(this)" data-price="15000">【オプ】<br>WINBACK×TRXセットコース（60分）</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（部位別30分）</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（全身60分）</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン（60分）</button>
+                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパマッサージ（60分）</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパ×チネイザン（75分）</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ（60分）</button>
+                <button type="button" id="nineirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング（50分）</button>
+                <button type="button" id="tenirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK×TRXセットコース（60分）</button>
             </div>
         </div>
 
@@ -1060,11 +1063,11 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】おがくず酵素風呂</button>
-                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヘッドマッサージ（10分）</button>
-                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヨガ（60分）</button>
-                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>TRXサスペンショントレーニング（50分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>貼るだけWINBACK施術（部位別20分）</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ（60分）</button>
+                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング（50分）</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）</button>
             </div>
         </div>
 
@@ -1082,14 +1085,14 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】おがくず酵素風呂</button>
-                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】WINBACK施術（部位別30分）</button>
-                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】WINBACK施術（全身60分）</button>
-                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】メディカルチネイザン（60分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>全身オイルリンパマッサージ（60分）</button>
-                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>全身オイルリンパ×チネイザン（75分）</button>
-                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】<br>貼るだけWINBACK施術（部位別20分）</button>
-                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">【オプション】ヘッドマッサージ（10分）</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（部位別30分）</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（全身60分）</button>
+                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン（60分）</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパマッサージ（60分）</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパ×チネイザン（75分）</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）</button>
             </div>
         </div>
 
@@ -1193,32 +1196,20 @@
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
 
-        // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
-        let irradiationsTimes = {
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            'ああああああ': 30,
-            '【オプ】メディカルチネイザン': 60,
-            '【オプ】オイルリンパマッサージ': 60,
-            '【オプ】ヨガ': 60,
-            '【オプ】TRXサスペンショントレーニング': 60,
-            '【オプ】WINBACK施術': 30,
-            '【オプ】おがくず酵素風呂': 60
-        };
+// 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
+let irradiationsTimes = {
+    '【オプション】WINBACK施術（部位別30分）': 30,
+    '【オプション】WINBACK施術（全身60分）': 60,
+    '【オプション】メディカルチネイザン（60分）': 60,
+    '【オプション】全身オイルリンパマッサージ（60分）': 60,
+    '【オプション】全身オイルリンパ×チネイザン（75分）': 75,
+    '【オプション】貼るだけWINBACK施術（部位別20分）': 30,
+    '【オプション】ヘッドマッサージ（10分）': 10,
+    '【オプション】ヨガ（60分）': 60,
+    '【オプション】TRXサスペンショントレーニング（50分）': 60,
+    '【オプション】WINBACK×TRXセットコース（60分）': 90,
+    '【オプション】おがくず酵素風呂': 60
+};
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
@@ -1237,7 +1228,6 @@
             'おかくず酵素風呂温浴＋ヨガ': 120,
             'おかくず酵素風呂温浴＋TRXサスペンショントレーニング': 120
         };
-
 
         let selectedMenuTime = 0;
 
