--- a/index.html
+++ b/index.html
@@ -1033,16 +1033,16 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（部位別30分）</button>
-                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（全身60分）</button>
-                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン（60分）</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（部位別30分）.</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（全身60分）.</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン（60分）.</button>
                 <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパマッサージ（60分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパ×チネイザン（75分）</button>
-                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）</button>
-                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）</button>
-                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ（60分）</button>
-                <button type="button" id="nineirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング（50分）</button>
-                <button type="button" id="tenirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK×TRXセットコース（60分）</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパ×チネイザン（75分）.</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）.</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）.</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ（60分）.</button>
+                <button type="button" id="nineirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング（50分）.</button>
+                <button type="button" id="tenirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK×TRXセットコース（60分）.</button>
             </div>
         </div>
 
@@ -1063,11 +1063,11 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂</button>
-                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）</button>
-                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ（60分）</button>
-                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング（50分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂.</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）.</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">ヨガ（60分）.</button>
+                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">TRXサスペンショントレーニング（50分）.</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）.</button>
             </div>
         </div>
 
@@ -1085,14 +1085,14 @@
                 <span class="highlight-text">オプション</span>
             </div>
             <div class="irradiations">
-                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂</button>
-                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（部位別30分）</button>
-                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（全身60分）</button>
-                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン（60分）</button>
-                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパマッサージ（60分）</button>
-                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパ×チネイザン（75分）</button>
-                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）</button>
-                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）</button>
+                <button type="button" id="oneirradiations" onclick="selectirradiations(this)" data-price="15000">おがくず酵素風呂.</button>
+                <button type="button" id="twoirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（部位別30分）.</button>
+                <button type="button" id="threeirradiations" onclick="selectirradiations(this)" data-price="15000">WINBACK施術（全身60分）.</button>
+                <button type="button" id="forirradiations" onclick="selectirradiations(this)" data-price="15000">メディカルチネイザン（60分）.</button>
+                <button type="button" id="fiveirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパマッサージ（60分）.</button>
+                <button type="button" id="sixirradiations" onclick="selectirradiations(this)" data-price="15000">全身オイルリンパ×チネイザン（75分）.</button>
+                <button type="button" id="sevenirradiations" onclick="selectirradiations(this)" data-price="15000">貼るだけWINBACK施術（部位別20分）.</button>
+                <button type="button" id="eightirradiations" onclick="selectirradiations(this)" data-price="15000">ヘッドマッサージ（10分）.</button>
             </div>
         </div>
 
@@ -1190,25 +1190,25 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let visitTimes = {
-            '1回目〈30分〉': 0,
-            '2回目以降〈0分〉': 0
+            '1回目': 0,
+            '2回目以降': 0
         };
 
         let selectedVisitTime = 0; // 訪問回数で選択された時間
 
 // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
 let irradiationsTimes = {
-    '【オプション】WINBACK施術（部位別30分）': 30,
-    '【オプション】WINBACK施術（全身60分）': 60,
-    '【オプション】メディカルチネイザン（60分）': 60,
-    '【オプション】全身オイルリンパマッサージ（60分）': 60,
-    '【オプション】全身オイルリンパ×チネイザン（75分）': 75,
-    '【オプション】貼るだけWINBACK施術（部位別20分）': 30,
-    '【オプション】ヘッドマッサージ（10分）': 10,
-    '【オプション】ヨガ（60分）': 60,
-    '【オプション】TRXサスペンショントレーニング（50分）': 60,
-    '【オプション】WINBACK×TRXセットコース（60分）': 90,
-    '【オプション】おがくず酵素風呂': 60
+    'WINBACK施術（部位別30分）.': 30,
+    'WINBACK施術（全身60分）.': 60,
+    'メディカルチネイザン（60分）.': 60,
+    '全身オイルリンパマッサージ（60分）.': 60,
+    '全身オイルリンパ×チネイザン（75分）.': 75,
+    '貼るだけWINBACK施術（部位別20分）.': 30,
+    'ヘッドマッサージ（10分）.': 10,
+    'ヨガ（60分）.': 60,
+    'TRXサスペンショントレーニング（50分）.': 60,
+    'WINBACK×TRXセットコース（60分）.': 90,
+    'おがくず酵素風呂.': 60
 };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
@@ -1722,14 +1722,29 @@ function removeSymptom(button) {
 
 // selectedSymptomを文字列に整形
 const selectedSymptomText = formData.selectedSymptom
-    ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
-    : 'メニュー未選択';
+  ? formData.selectedSymptom.map(item => `${item.name}`).join(',')
+  : 'メニュー未選択';
 
-// irradiationsCountの整形（nullチェック & 改行やタグ除去）
-const irradiationsText = formData.irradiationsCount
-    ? String(formData.irradiationsCount).replace(/<br\s*\/?>/gi, '').replace(/[\r\n]+/g, '')
-    : 'なし';
+// irradiationsCount を「【オプション】xxx,【オプション】yyy,...」に整形
+const irradiationsText = (() => {
+  const src = formData.irradiationsCount;
+  if (!src) return 'なし';
 
+  // 1) 文字列化 → <br> を改行に正規化
+  const normalized = String(src).replace(/<br\s*\/?>/gi, '\n');
+
+  // 2) 改行・カンマ・読点で分割
+  const parts = normalized.split(/[\n,、]+/);
+
+  // 3) 前後の空白除去・空要素除去・既存の【オプション】除去→付与
+  const prefixed = parts
+    .map(s => s.trim())
+    .filter(Boolean)
+    .map(s => s.replace(/^【\s*オプション\s*】/, '')) // 二重付与防止
+    .map(s => `【オプション】${s}`);
+
+  return prefixed.length ? prefixed.join(',') : 'なし';
+})();
 
             liff.sendMessages([{
                 type: 'text',
