--- a/index.html
+++ b/index.html
@@ -468,9 +468,9 @@
                 <span class="highlight-text">◆おがくず酵素風呂◆</span>
             </div>
             <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">おかくず酵素風呂温浴</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">おかくず酵素風呂ペア温浴</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">貸し切りおかくず酵素風呂温浴</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment1')" data-price="15000">おがくず酵素風呂温浴</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment2')" data-price="15000">おがくず酵素風呂ペア温浴</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment3')" data-price="15000">貸し切りおがくず酵素風呂温浴</button>
             </div>
             <div class="highlight-background">
                 <span class="highlight-text">オプション</span>
@@ -543,11 +543,11 @@
             </div>
             <div class="symptoms">
                 <div class="info-text">※お一つのみご選択いただけます</div>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>メディカルチネイザン</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>オイルリンパマッサージ</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>WINBACK施術</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>ヨガ</button>
-                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おかくず酵素風呂温浴<br>＋<br>TRXサスペンショントレーニング</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>メディカルチネイザン</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>オイルリンパマッサージ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment8')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>WINBACK施術</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>ヨガ</button>
+                <button type="button" onclick="selectSymptom(this, 'treatment9')" data-price="15000">おがくず酵素風呂温浴<br>＋<br>TRXサスペンショントレーニング</button>
             </div>
         </div>
 
@@ -613,7 +613,7 @@
 
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk'
+                liffId: '2007123481-qvKRkdDO'
             }).then(() => {
                 console.log('LIFF初期化成功');
             }).catch((err) => {
@@ -649,9 +649,9 @@ let irradiationsTimes = {
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
 
         let menuTimes = {
-            'おかくず酵素風呂温浴': 60,
-            'おかくず酵素風呂ペア温浴': 90,
-            '貸し切りおかくず酵素風呂温浴': 90,
+            'おがくず酵素風呂温浴': 60,
+            'おがくず酵素風呂ペア温浴': 90,
+            '貸し切りおがくず酵素風呂温浴': 90,
             'WINBACK施術（部位別30分）': 30,
             'WINBACK施術（全身60分）': 90,
             'メディカルチネイザン（60分）': 70,
@@ -661,11 +661,11 @@ let irradiationsTimes = {
             'ヨガ（60分）': 70,
             'TRXサスペンショントレーニング（50分）': 50,
             'WINBACK×TRXセットコース（60分）': 90,
-            'おかくず酵素風呂温浴＋メディカルチネイザン': 120,
-            'おかくず酵素風呂温浴＋オイルリンパマッサージ': 120,
-            'おかくず酵素風呂温浴＋WINBACK施術': 120,
-            'おかくず酵素風呂温浴＋ヨガ': 120,
-            'おかくず酵素風呂温浴＋TRXサスペンショントレーニング': 120
+            'おがくず酵素風呂温浴＋メディカルチネイザン': 120,
+            'おがくず酵素風呂温浴＋オイルリンパマッサージ': 120,
+            'おがくず酵素風呂温浴＋WINBACK施術': 120,
+            'おがくず酵素風呂温浴＋ヨガ': 120,
+            'おがくず酵素風呂温浴＋TRXサスペンショントレーニング': 120
         };
 
         let selectedMenuTime = 0;
@@ -1089,7 +1089,7 @@ const irradiationsText = (() => {
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbyMCpwPdMBLFe3VETd_2vY9MQAhvCJLWehDMtOGYTsbf5Y0OkapnazmB1FMBJN4i-YK/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbyK58xY0_utTh2UDbF_4kp3IvZ-iJ9scDMtc4_OgII1o1L3rECEGk4n2uG9m2nCoos1eA/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
