--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
         }
 
         .snsphoto-buttons,
+        .douki-buttons,
         .timezone-buttons,
         .store-buttons,
         .priority-buttons,
@@ -80,6 +81,7 @@
         }
 
         .snsphoto-buttons button,
+        .douki-buttons button,
         .timezone-buttons button,
         .store-buttons button,
         .priority-buttons button,
@@ -101,6 +103,7 @@
         }
 
         .snsphoto-buttons button.active,
+        .douki-buttons button.active,
         .timezone-buttons button.active,
         .store-buttons button.active,
         .priority-buttons button.active,
@@ -263,6 +266,25 @@
             }
         }
         
+/* 追加 */
+.priority-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+/* 詳細テキスト行を1行まるごと使う */
+.priority-buttons .ward-extra {
+  flex: 0 0 100%;
+  width: 100%;
+}
+
+/* 入力ボックスも横いっぱい＆はみ出し防止 */
+.priority-buttons .ward-extra input {
+  display: block;
+  width: 100%;
+  box-sizing: border-box;
+}
     </style>
 </head>
 
@@ -382,6 +404,18 @@
   <button type="button" id="fourtimezone" onclick="selecttimezone(this)" data-ja="土日祝" data-en="Saturdays, Sundays, and holidays">土日祝</button>
 </div>
 
+<div class="label" data-ja="来店動機" data-en="Reason for Visit">来店動機</div>
+<div class="douki-buttons">
+  <button type="button" id="onedouki" onclick="selectdouki(this)" data-ja="HP（来店動機）" data-en="Website">HP（来店動機）</button>
+  <button type="button" id="onedouki" onclick="selectdouki(this)" data-ja="滞在中のホテルで予約してもらった" data-en="I made a reservation at the hotel">滞在中のホテルで予約してもらった</button>
+  <button type="button" id="twodouki" onclick="selectdouki(this)" data-ja="Instagram（来店動機）" data-en="Instagram">Instagram（来店動機）</button>
+  <button type="button" id="threedouki" onclick="selectdouki(this)" data-ja="Google等での検索（来店動機）" data-en="Google Search">Google等での検索（来店動機）</button>
+  <button type="button" id="fourdouki" onclick="selectdouki(this)" data-ja="ホットペッパービューティー（来店動機）" data-en="Hot Pepper Beauty">ホットペッパービューティー（来店動機）</button>
+  <button type="button" id="fivedouki" onclick="selectdouki(this)" data-ja="知人の紹介（来店動機）" data-en="Referred by Friend">知人の紹介（来店動機）</button>
+  <button type="button" id="sixdouki" onclick="selectdouki(this)" data-ja="通りすがり（来店動機）" data-en="Walk-in">通りすがり（来店動機）</button>
+  <button type="button" id="sevemdouki" onclick="selectdouki(this)" data-ja="その他（来店動機）" data-en="Other">その他（来店動機）</button>
+</div>
+
 <div class="label" data-ja='"知人の紹介"を選択された方は、紹介者のお名前をご記入ください。' data-en='If "Referred by Friend" was selected, please write the referrer’s name.'>
   "知人の紹介"を選択された方は、<br>紹介者のお名前をご記入ください。
 </div>
@@ -473,6 +507,7 @@ For inquiries, please include details and a photo via chat to allow smoother com
 
     <script src="https://static.line-scdn.net/liff/edge/2.1/sdk.js"></script> <!-- LIFF SDKの読み込み -->
     <script>
+        let doukiCount = '';
         let timezoneCount = '';
         let priorityCount = '';
         let demandCount = '';
@@ -485,7 +520,7 @@ For inquiries, please include details and a photo via chat to allow smoother com
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
+                liffId: '2007479541-R32K8bYP' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
@@ -520,6 +555,14 @@ function selectpriority(element) {
 
     element.classList.add('active');
     priorityCount = element.getAttribute('data-ja');
+}
+
+function selectdouki(element) {
+    const buttons = document.querySelectorAll('.douki-buttons button');
+    buttons.forEach(button => button.classList.remove('active'));
+
+    element.classList.add('active');
+    doukiCount = element.getAttribute('data-ja');
 }
 
 function selectdemand(element) {
@@ -587,6 +630,7 @@ function selectsnsphoto(element) {
             const message6 = document.getElementById('message6').value;
             const message7 = document.getElementById('message7').value;
             const message8 = document.getElementById('message8').value;
+            doukiCount: doukiCount;
             timezoneCount: timezoneCount;
             priorityCount: priorityCount;
             demandCount: demandCount;
@@ -612,6 +656,7 @@ function selectsnsphoto(element) {
                 message6,
                 message7,
                 message8,
+                doukiCount,
                 wardFreeText,
                 timezoneCount,
                 priorityCount,
@@ -661,19 +706,25 @@ function selectsnsphoto(element) {
 
             // フォームデータのチェック
             if (!formData.priorityCount) {
-                alert('ご職業をご選択ください。');
+                alert('勤務先をご選択ください。');
+                return;
+            }
+
+            // フォームデータのチェック
+            if (!formData.doukiCount) {
+                alert('来店同期をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.demandCount) {
-                alert('来店動機をご選択ください。');
+                alert('勤務先をご選択ください。');
                 return;
             }
 
             // フォームデータのチェック
             if (!formData.chanceCount) {
-                alert('来店頻度をご選択ください。');
+                alert('空き状況の配信を希望されますか？をご選択ください。');
                 return;
             }
 
@@ -698,7 +749,7 @@ function selectsnsphoto(element) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字)】\n・${formData.message2}\n\n【お名前(ふりがな)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【電話番号】\n・${formData.message4}\n\n【お住まい】\n・${formData.message5}\n\n【お住まいの区】\n・${formData.priorityCount}\n\n【お住まいの詳細】\n・${formData.wardFreeText}\n\n【勤務先】\n・${formData.demandCount}\n\n【来店しやすい時間帯】\n・${formData.timezoneCount}\n\n【知人の紹介名】\n・${formData.message7}\n\n【空き状況配信】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n【長さ出し左右本数】\n・${formData.message8}\n\n【SNS紹介】\n・${formData.snsphotoCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
+                text: `≪アンケート≫\n【ご来店日】\n・${formData.message}\n\n【お名前(漢字)】\n・${formData.message2}\n\n【お名前(ふりがな)】\n・${formData.message6}\n\n【生年月日】\n・${formData.message3}\n\n【電話番号】\n・${formData.message4}\n\n【お住まい】\n・${formData.message5}\n\n【お住まいの区】\n・${formData.priorityCount}\n\n【お住まいの詳細】\n・${formData.wardFreeText}\n\n【勤務先】\n・${formData.demandCount}\n\n【来店しやすい時間帯】\n・${formData.timezoneCount}\n\n【来店動機】\n・${formData.doukiCount}\n\n【知人の紹介名】\n・${formData.message7}\n\n【空き状況配信】\n・${formData.chanceCount}\n\n【過去施術】\n・${formData.IntroductionCount}\n\n【薬品/ネイルでのアレルギー】\n・${formData.deliveryCount}\n\n【長さ出し左右本数】\n・${formData.message8}\n\n【SNS紹介】\n・${formData.snsphotoCount}\n\n【重要項目の同意】\n・${formData.budgetyCount}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('カウンセリングシートのご記入と、重要事項へのご同意、ありがとうございました。');
