--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@ For inquiries, please include details and a photo via chat to allow smoother com
         // LIFF初期化
         document.addEventListener('DOMContentLoaded', function () {
             liff.init({
-                liffId: '2007479541-R32K8bYP' // ここにあなたのLIFF IDを入力
+                liffId: '2005254357-zKma9BZk' // ここにあなたのLIFF IDを入力
             }).then(() => {
                 // LIFF初期化成功時の処理
                 console.log('LIFF初期化成功');
