--- a/index.html
+++ b/index.html
@@ -237,6 +237,22 @@
             color: #fff;
         }
 
+.visit-buttons,
+.highschool-buttons,
+.symptoms,
+.menu-sections,
+.irradiations {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-bottom: 20px;
+}
+
+/* menu-sections だけ縦一列にする */
+.menu-sections {
+    flex-direction: column; /* ← 追加 */
+}
+
         .date-inputs input[type="datetime-local"] {
             width: calc(100% - 22px);
             padding: 10px;
@@ -1312,6 +1328,8 @@
             const formData = {
                 name: document.getElementById('name').value.trim(),
                 phone: document.getElementById('phone').value.trim(),
+                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : null, // 空の選択肢をチェック
+                irradiationsCount: irradiationsCount,
                 dates: [
                     document.getElementById('date1').value,
                     document.getElementById('date2').value
@@ -1330,15 +1348,20 @@
                 return;
             }
 
+            if (!formData.selectedSymptom) {
+                alert('メニューを選択してください。');
+                return;
+            }
+
             if (!formData.dates[0]) {
-                alert('第1希望日※必須を選択してください。');
+                alert('第1希望日を選択してください。');
                 return;
             }
 
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\n\n〈お名前〉\n・${formData.name}\n\n〈電話番号〉\n・${formData.phone}\n\n〈第一希望日〉\n${formatDate(formData.dates[0])}\n\n〈第二希望日〉\n${formatDate(formData.dates[1])}\n\n〈メッセージ〉\n・${formData.message}`
+                text: `【予約フォーム】\n\n〈お名前〉\n・${formData.name}\n\n〈電話番号〉\n・${formData.phone}\n\n〈メニュー〉\n・${formData.selectedSymptom}\n〈オプション〉\n・${formData.irradiationsCount}\n\n〈第一希望日〉\n${formatDate(formData.dates[0])}\n\n〈第二希望日〉\n${formatDate(formData.dates[1])}\n\n〈メッセージ〉\n・${formData.message}`
             }]).then(() => {
                 alert('当日キャンセルは無いようにお願いいたします。');
                 liff.closeWindow();
